--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@react-navigation/stack": "^5.2.18",
     "galio-framework": "^0.6.3",
     "react": "16.11.0",
+    "react-hook-form": "^5.7.2",
     "react-native": "0.62.2",
     "react-native-dropdown-menu": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
